Change underlying tag of <Button> to <div> to prevent Safari bug Ref: https://stackoverflow.com/questions/35464067/flexbox-not-working-on-button-element-in-safari

--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -18,9 +18,8 @@
 }
 
 .#{$prefix}-button {
-    @include remove-button-appearance;
-
     cursor: pointer;
+    user-select: none;
     -webkit-tap-highlight-color: transparent;
 
     // ----------------------
